# asv

./: .appveyor.yml  .codecov.yml  .coveragerc  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CHANGES.rst  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  LICENSE.rst  MANIFEST.in  README.rst  appveyor.yml  asv.conf.json  asv.conf.json.html  asv.conf.schema.json  asv.conf.toml  commands.html  comparer_bench.py  dev.html  genindex.html  index.html  installing.html  objects.inv  pip_requirements.txt  publish_docs.sh  py-modindex.html  pyproject.toml  pytest.ini  reference.html  requirements-dev.txt  search.html  searchindex.js  setup.cfg  setup.py  towncrier.toml  tox.ini  (+2 more)
.continuous-integration/: download_reqs.py
.continuous-integration/appveyor/: install-miniconda.ps1
.github/workflows/: build_wheels.yml  ci.yml  ci_win.yml  pre-commit.yml  triggered.yml
LICENSES/: PYMPLER_ASIZEOF_LICENSE
_sources/: installing.txt  using.txt
asv/: __init__.py  __main__.py  _rangemedian.cpp  _stats.py  asvtools.py  benchmark.py  benchmarks.py  branch_cache.py  build_cache.py  config.py  console.py  do_benchmark.py  environment.py  feed.py  graph.py  line.py  machine.py  main.py  plugin_manager.py  profile.py  profiling.py  publishing.py  repo.py  results.py  runner.py  schema.py  statistics.py  step_detect.py  util.py  wheel_cache.py
asv/.github/workflows/: ci.yml  flake8.yml
asv/_release/: __init__.py
asv/commands/: __init__.py  check.py  common_args.py  compare.py  compare_variant.py  continuous.py  dev.py  find.py  gh_pages.py  gh_pages.sh  machine.py  preview.py  profile.py  profiling.py  publish.py  quickstart.py  rm.py  run.py  setup.py  show.py  update.py
asv/envmgmt/: __init__.py  discover.py  facade.py  identity.py  matrix_pure.py  protocol.py  virtualenv_backend.py
asv/ext/: __init__.py  ccache.py
asv/plugins/: __init__.py  _mamba_helpers.py  comparisonlist.py  conda.py  dumbenv.py  dumbrepo.py  git.py  github.py  kcachegrind.py  mamba.py  mercurial.py  rattler.py  regressions.py  runsnake.py  snakeviz.py  summarygrid.py  summarylist.py  uv.py  virtualenv.py
asv/plugins/benchmarks/: asvmemray.py
asv/template/: .gitignore  asv.conf.json
asv/template/benchmarks/: benchmarks.py  test_benchmarks.py
asv/www/: asv.css  asv.js  asv_ui.js  comparisonlist.css  comparisonlist.js  error.html  graphdisplay.js  index.html  regressions.css  regressions.js  summary.js  summarygrid.js  summarylist.css  summarylist.js
benchmarks/: step_detect.py
changelog.d/: +1387.bugfix.rst  +cdf9af28.misc.rst  +condaChannels.bugfix.rst  +f99f1374.misc.rst  +matrixReq.bugfix.rst  1346.bugfix.rst  1349.bugfix.rst  1351.feat.rst  1372.bugfix.rst  1373.bugfix.rst  1377.feat.rst  1379.misc.rst  1380.misc.rst  1393.bugfix.rst  1403.bugfix.rst  1404.bugfix.rst  1420.feat.rst  1421.misc.rst  1426.bugfix.rst  1431.bugfix.rst  1444.bugfix.rst  1446.bugfix.rst  1463.bugfix.rst  1557.bugfix.rst  1567.misc.rst  1582.bugfix.rst  1591.feat.rst  1595.misc.rst  readme.md
docs/: make.bat
docs/source/: asv.bib  asv.conf.json.rst  benchmarks.rst  commands.rst  conf.py  credits.rst  credits.txt  dev.rst  env_vars.rst  ext.rst  guide_benchmark_release.rst  guide_pull_request.rst  guides.rst  index.rst  installing.rst  manindex.rst  reference.rst  step_detection.rst  tuning.rst  user_reference.rst  using.rst  writing_benchmarks.rst
docs/source/_static/: asv-doc.css
docs/source/_templates/: layout.html
docs/source/development/: environment_backend_extract.md
plugin_packages/: README.md
plugin_packages/asv_conda/: README.md  pyproject.toml
plugin_packages/asv_conda/asv_conda/: __init__.py
plugin_packages/asv_mamba/: README.md  pyproject.toml
plugin_packages/asv_mamba/asv_mamba/: __init__.py
plugin_packages/asv_pixi/: README.md  pyproject.toml
plugin_packages/asv_pixi/asv_pixi/: __init__.py
plugin_packages/asv_rattler/: pyproject.toml
plugin_packages/asv_rattler/asv_rattler/: __init__.py
plugin_packages/asv_uv/: README.md  pyproject.toml
plugin_packages/asv_uv/asv_uv/: __init__.py
scripts/: get_contribs.sh
test/: __init__.py  asv-machine.json  asv.conf.json  conftest.py  example_plugin.py  test_benchmarks.py  test_check.py  test_compare.py  test_conf.py  test_console.py  test_continuous.py  test_dev.py  test_env_discover.py  test_environment.py  test_environment_bench.py  test_envmgmt_extract.py  test_existing_env_commits.py  test_external_env_plugins.py  test_feed.py  test_find.py  test_gh_pages.py  test_graph.py  test_machine.py  test_matrix_reserved_keys.py  test_profile.py  test_publish.py  test_quickstart.py  test_repo.py  test_results.py  test_rm.py  test_run.py  test_run_skip_progress.py  test_runner.py  test_show.py  test_statistics.py  test_step_detect.py  test_subprocess.py  test_update.py  test_util.py  test_web.py  (+4 more)
test/.benchmark/: test_example_benchmarks.py  test_secondary_benchmarks.py  time_secondary.py
test/benchmark/: cache_examples.py  code_extraction.py  finalize_teardown.py  imp_examples.py  mem_examples.py  multiple.py  named.py  params_examples.py  peakmem_examples.py  time_examples.py  time_secondary.py  timeraw_examples.py  track_examples.py
test/benchmark/subdir/: time_subdir.py
test/example_results/: benchmarks.json
test/example_results/cheetah/: 05d283b9-py2.7-Cython-numpy1.8.json  13dd6571-py2.7-Cython-numpy1.8.json  22b920c6-py2.7-Cython-numpy1.8.json  8a997b01-py2.7-Cython-numpy1.8.json  aaaaaaaa-py2.7-Cython-numpy1.8.json  e8679b2e-py2.7-Cython-numpy1.8.json  fcf8c079-py2.7-Cython-numpy1.8.json
test/test_repo_template/: setup.py
test/test_repo_template/asv_test_repo/: __init__.py
