[project]
name = "asv"
description = "Airspeed Velocity: A simple Python history benchmarking tool"
readme = { file = "README.rst", content-type = "text/x-rst" }
license = { text = "BSD-3-Clause" }
requires-python = ">=3.7"
authors = [
    { name = "Michael Droettboom", email = "mdroe@stsci.edu" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Environment :: Web Environment",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
]
dynamic = [
    "version",
]
dependencies = [
    "asv-runner>=v0.2.1",
    "json5",
    "build",
    "tabulate",
    "virtualenv",
    "packaging",
    "tomli; python_version < '3.11'",
    "colorama; platform_system == 'Windows'",
    "pyyaml; platform_python_implementation != \"PyPy\"",
    "pympler; platform_python_implementation != \"PyPy\"",
]

[project.urls]
"Source Code" = "https://github.com/airspeed-velocity/asv"
Documentation = "https://asv.readthedocs.io/en/stable/"

[project.scripts]
asv = "asv.__main__:main"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-xdist",
    "pytest-timeout",
    "pytest-rerunfailures>=10.0",
    "filelock",
    "numpy",
    "scipy; platform_python_implementation != \"PyPy\"",
    "feedparser",
    "selenium",
    "flaky",
    "pytest-rerunfailures",
    "python-hglib; platform_system != 'Windows'",
    "rpy2; platform_system != 'Windows' and platform_python_implementation != 'PyPy'",
]
doc = [
    "sphinx",
    "sphinx-autoapi",
    "sphinxcontrib.bibtex",
    "sphinxcontrib.katex",
    "furo",
]
dev = [
    "ruff",
    "isort >= 5.11.5",
]
hg = [
    "python-hglib",
]
plugs = [
    "asv-bench-memray",
]
all = ["asv[doc,dev,hg,plugs]"]
[build-system]
requires = [
    "wheel",
    # pin setuptools:
    # https://github.com/airspeed-velocity/asv/pull/1426#issuecomment-2290658198
    "setuptools>=64,<72.2.0",
    "setuptools_scm>=6",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
platforms = [
    "any",
]
zip-safe = false
include-package-data = true
license-files = [
    "LICENSE.rst",
]

[tool.setuptools.exclude-package-data]
"*" = ["*.sh"]

[tool.pytest.ini_options]
addopts = "-p no:logging"

[tool.ruff]
line-length = 99
extend-ignore = [
    "E741", # Do not use variables named 'I', 'O', or 'l'
]
extend-exclude = [
    "test/example_results/cheetah",
]

[tool.isort]
line_length = 99
only_sections = true

[tool.setuptools_scm]
version_file = "asv/_version.py"

[tool.cibuildwheel.linux]
manylinux-x86_64-image = "manylinux2014"
manylinux-aarch64-image = "manylinux2014"
musllinux-x86_64-image = "musllinux_1_1"

[tool.cibuildwheel.macos]
archs = "x86_64 arm64"

[tool.cibuildwheel.windows]
archs = ['AMD64']

[tool.setuptools.packages.find]
where = ["."]
exclude = ["wheelhouse", "test", "benchmarks", "docs"]
namespaces = true
include = ["asv", "asv.*"]

[tool.codespell]
# Ref: https://github.com/codespell-project/codespell#using-a-config-file
skip = '.git,*.css'
check-hidden = true
ignore-regex = '- Boris Feld\b'
# ignore-words-list = ''
