[build-system]
requires = [
    # pin setuptools:
    # https://github.com/airspeed-velocity/asv/pull/1426#issuecomment-2290658198
    "setuptools>=77,<=80.9.0",
    "setuptools_scm",
]
build-backend = "setuptools.build_meta"

[project]
name = "asv"
description = "Airspeed Velocity: A simple Python history benchmarking tool"
readme = "README.rst"
license = "BSD-3-Clause"
license-files = ["LICENSE.rst"]
requires-python = ">=3.9"
authors = [
    { name = "Michael Droettboom", email = "mdroe@stsci.edu" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Testing",
]
dynamic = [
    "version",
]
dependencies = [
    "asv-runner>=v0.2.1",
    "json5",
    "build",
    "tabulate",
    "virtualenv",
    "packaging",
    "importlib-metadata",
    "tomli; python_version < '3.11'",
    "colorama; platform_system == 'Windows'",
    "pyyaml; platform_python_implementation != \"PyPy\"",
    "pympler; platform_python_implementation != \"PyPy\"",
]

[project.urls]
"Source Code" = "https://github.com/airspeed-velocity/asv"
Documentation = "https://asv.readthedocs.io/en/stable/"

[project.scripts]
asv = "asv.__main__:main"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-xdist",
    "pytest-timeout",
    "pytest-rerunfailures>=10.0",
    "filelock",
    "numpy",
    "scipy; platform_python_implementation != \"PyPy\"",
    "feedparser",
    "selenium",
    "flaky",
    "pytest-rerunfailures",
    "python-hglib; platform_system != 'Windows'",
    "pip",
]
doc = [
    "sphinx",
    "sphinx-autoapi",
    "sphinx-collapse",
    "sphinxcontrib.bibtex",
    "setuptools", # dependency from bibtex
    "sphinxcontrib.katex",
    "furo",
    "astroid",
]
dev = [
    "ruff",
]
hg = [
    "python-hglib",
]
plugs = [
    "asv-bench-memray",
]
envs = [
    "py-rattler",
    "uv",
]
all = ["asv[doc,dev,hg,envs]"]

[tool.pytest.ini_options]
minversion = "6"
testpaths = ["test"]
log_cli_level = "INFO"
addopts = ["-p no:logging", "-ra", "--strict-config", "--strict-markers"]

[tool.ruff]
line-length = 99
extend-exclude = [
    "test/example_results/cheetah",
]

[tool.ruff.lint]
extend-select = [
    "B",
    "C4",
    "FURB",
    "G",
    "I",
    "ICN",
    "PGH",
    "PIE",
    "RUF",
    "UP",
]
ignore = [
    "B007",  # Loop control variable not used within loop body
    "B020",  # Loop control variable overrides iterable it iterates
    "B904",  # Within an `except` clause, raise exceptions with `raise ... from err`
    "E741",  # Do not use variables named 'I', 'O', or 'l'
    "RUF005", # Consider unpacking instead of concatenation
    "RUF012", # Mutable class attributes should be annotated with `typing.ClassVar`
    "RUF059", # Unpacked variable is never used
    "UP015", # Unnecessary mode argument
    "UP028", # Replace `yield` over `for` loop with `yield from`
]

[tool.ruff.lint.per-file-ignores]
"test/**" = ["B011", "B017", "B018", "B028"]

[tool.ruff.format]
quote-style = "preserve"

[tool.setuptools_scm]
write_to = "asv/_version.py"

[tool.cibuildwheel.linux]
manylinux-x86_64-image = "manylinux2014"
manylinux-aarch64-image = "manylinux2014"
musllinux-x86_64-image = "musllinux_1_2"

[tool.cibuildwheel.macos]
archs = "x86_64 arm64"

[tool.cibuildwheel.windows]
archs = ['AMD64']

[tool.setuptools.packages.find]
where = ["."]
exclude = ["wheelhouse", "test", "benchmarks", "docs"]
namespaces = true
include = ["asv", "asv.*"]

[tool.codespell]
# Ref: https://github.com/codespell-project/codespell#using-a-config-file
skip = '.git,*.css'
check-hidden = true
ignore-regex = '- Boris Feld\b'
# ignore-words-list = ''
