[metadata]
name = asv
description = Airspeed Velocity: A simple Python history benchmarking tool
long_description = file: README.rst, CHANGES.rst
author = Michael Droettboom
author_email = mdroe@stsci.edu
license = BSD-3-Clause
license_file = LICENSE.rst
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Environment :: Web Environment
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Testing
project_urls =
    Source Code = https://github.com/airspeed-velocity/asv
    Documentation = https://asv.readthedocs.io/en/stable/

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.7
install_requires =
    six

[options.extras_require]
test =
    pytest
    pytest-xdist
    pytest-timeout
    pytest-rerunfailures>=10.0
    filelock
    virtualenv
    numpy
    scipy; platform_python_implementation != "PyPy"
    feedparser
    selenium
    python-hglib
doc =
    sphinx
    sphinx_bootstrap_theme
dev = 
    flake8
hg = python-hglib

[options.entry_points]
console_scripts =
    asv = asv.__main__:main

[flake8]
max-line-length = 99
ignore = 
    W504,  # W504: Line break occurred after a binary operator
    E741  # E741: Do not use variables named 'I', 'O', or 'l'
exclude = setup.py,
        asv/__init__.py
        asv/environment.py,
        asv/machine.py,
        asv/graph.py,
        asv/extern,
        asv/template/benchmarks,
        test/test_repo_template/asv_test_repo,
        test/benchmark.invalid,
        test/example_results,
        test/__init__.py,
        test/example_plugin.py,
        test/test_check.py,
        test/test_compare.py,
        test/test_check.py,
        test/test_compare.py,
        test/test_show.py,
        test/test_compare.py,
        test/test_publish.py,
        test/test_machine.py,
        test/test_update.py,
        test_gh_pages.py,
        test_environment.py,
        test_workflow.py,
        test/test_repo.py,
        test/test_quickstart,
        test/test_runner.py,
        test/test_run.py,
        test/test_rm.py,
        test/test_continuous.py,
        test/test_find.py,
        benchmarks/step_detect.py,
        benchmarks/__init__.py,
        docs/source/conf.py,
        .pytest_cache,
        asv/results.py,
        asv/runner.py,
        asv/benchmarks.py

[isort]
line_length = 99
only_sections = true
