[metadata]
name = asv
description = Airspeed Velocity: A simple Python history benchmarking tool
long_description = file: README.rst, CHANGES.rst
author = Michael Droettboom
author_email = mdroe@stsci.edu
license = BSD-3-Clause
license_file = LICENSE.rst
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Environment :: Web Environment
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Testing
project_urls =
    Source Code = https://github.com/airspeed-velocity/asv
    Documentation = https://asv.readthedocs.io/en/stable/

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.7

[options.extras_require]
test =
    pytest
    pytest-xdist
    pytest-timeout
    pytest-rerunfailures>=10.0
    filelock
    virtualenv
    numpy
    scipy; platform_python_implementation != "PyPy"
    feedparser
    selenium
    python-hglib
doc =
    sphinx
    sphinx_bootstrap_theme
dev =
    flake8
    isort
hg =
    python-hglib

[options.entry_points]
console_scripts =
    asv = asv.__main__:main

[tool:pytest]
addopts=-p no:logging

[flake8]
max-line-length = 99
ignore =
# W504: Line break occurred after a binary operator
    W504,
# E741: Do not use variables named 'I', 'O', or 'l'
    E741
exclude = asv/extern

[isort]
line_length = 99
only_sections = true
