[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "asv_mamba"
version = "0.2.0"
description = "ASV environment backend using libmambapy (API), not conda CLI"
requires-python = ">=3.9"
dependencies = ["asv>=0.6.5"]

[project.optional-dependencies]
# libmambapy is published on conda-forge, not reliably on PyPI
api = []

[tool.setuptools.packages.find]
include = ["asv_mamba*"]
