[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "asv_pixi"
version = "0.0.0"
description = "ASV environment backend using pixi APIs (stub)"
requires-python = ">=3.9"
dependencies = ["asv>=0.6.5"]

[tool.setuptools.packages.find]
include = ["asv_pixi*"]
