[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "asv_pixi"
version = "0.1.0"
description = "ASV environment backend using rattler APIs (pixi-oriented, not pixi CLI)"
requires-python = ">=3.9"
dependencies = ["asv>=0.6.5", "asv_rattler>=0.1.0"]

[project.optional-dependencies]
api = ["py-rattler>=0.22", "PyYAML"]

[tool.setuptools.packages.find]
include = ["asv_pixi*"]
